test/e2e/fixtures/namespace-a.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kubeviewer-e2e
  labels:
    managed-by: kubeviewer-e2e
