test/e2e/fixtures/nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: e2e-nodeport-svc
  namespace: clusterfudge-e2e
  labels:
    managed-by: clusterfudge-e2e
spec:
  type: NodePort
  selector:
    app: e2e-nginx
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
